trunk/Archive2/56/83b36cde850a53/output
main.cpp: In function 'bool FindRep(std::string&)':
main.cpp:88:12: error: expected '(' before 'tHold'
         if tHold <= rCnt 
            ^
main.cpp:80:9: warning: unused variable 'tHold' [-Wunused-variable]
     int tHold = 5;
         ^
